Removing logic from World (soon entities) objects and preparing for database / JPA. The objects in World is now entities, but not yet used as entities. Worked on splitting up the GameWorld classes from Game classes. A game should never change values in GameWorld classes.